--- a/client/public/locales/de/translation.json
+++ b/client/public/locales/de/translation.json
@@ -1,13 +1,6 @@
 {
   "main": {
-    "header": "¡Bienvenido/a a la app!",
-    "new_messages_one": "Tienes un mensaje nuevo",
-    "new_messages_other": "Tienes {{count}} mensajes nuevos",
-    "current_date": "Hoy es {{date, DATE_LONG}}",
-    "incoming_message": "Tienes un nuevo mensaje de {{from}}",
-    "message_contents": "Dice: {{body}}",
-    "message_contents_male": "Dice: {{body}}",
-    "message_contents_female": "Dice: {{body}}"
+    "header": "Willkommen auf der Homepage!"
   },
   "home":{
     "header": "Willkommen auf der Homepage!"
@@ -17,5 +10,29 @@
   },
   "about":{
     "header": "Über uns"
+  },
+  "createListing":{
+    "header": "Erstellen Sie einen Eintrag",
+    "sell": "Verkaufen",
+    "rent": "Mieten",
+    "parking": "Parken",
+    "furnished": "Möbliert",
+    "offer": "Angebot",
+    "beds": "Betten",
+    "baths": "Bäder",
+    "area": "Fläche",
+    "regular": "Regelmäßig",
+    "month": "Monat",
+    "discount": "Rabatt",
+    "images": "Bilder",
+    "img_desc":"Das erste Bild wird das Cover sein (maximal 6)",
+    "delete": "Löschen"
+  },
+  "listing":{
+    "loading": "Wird geladen...",
+    "error": "Etwas ist schief gelaufen",
+    "link": "Link kopiert",
+    "desc": "Beschreibung",
+    "contact": "Kontaktieren Sie den Vermieter"
   }
 }
