--- a/client/public/locales/fi/translation.json
+++ b/client/public/locales/fi/translation.json
@@ -62,7 +62,8 @@
   "header":{
     "home": "Koti",
     "about": "Tietoa meistä",
-    "signin": "Kirjaudu sisään"
+    "signin": "Kirjaudu sisään",
+    "signout": "Kirjaudu ulos"
   },
   "profile":{
     "title": "Profiili",
