--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -63,7 +63,9 @@
     "pricing":"Pricing",
     "updateing":"Updateing...",
     "updateListing":"Update listing",
-    "upload":"Upload"
+    "upload":"Upload",
+    "creating": "Creating...",
+    "createListing":"Create Listing"
   },
   "listing":{
     "loading": "Loading...",
