--- a/client/public/locales/de/translation.json
+++ b/client/public/locales/de/translation.json
@@ -102,6 +102,7 @@
     "deleteAccount": "Konto löschen",
     "signout": "Abmelden",
     "showListings": "Listings anzeigen",
+    "showFavourites": "Favoriten anzeigen",
     "yourListings": "Ihre Listings",
     "delete": "Löschen",
     "edit": "Bearbeiten",
