--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -102,6 +102,7 @@
     "deleteAccount": "Delete Account",
     "signout": "Sign Out",
     "showListings": "Show My Listings",
+    "showFavourites": "Show My Favourites",
     "yourListings": "Your Listings",
     "delete": "Delete",
     "edit": "Edit",
