--- a/client/public/locales/fi/translation.json
+++ b/client/public/locales/fi/translation.json
@@ -102,6 +102,7 @@
     "deleteAccount": "Poista tili",
     "signout": "Kirjaudu ulos",
     "showListings": "Näytä listaukset",
+    "showFavourites": "Näytä suosikit",
     "yourListings": "Sinun listaukset",
     "delete": "Poista",
     "edit": "Muokkaa",
