--- a/client/public/locales/de/translation.json
+++ b/client/public/locales/de/translation.json
@@ -65,7 +65,9 @@
     "delete": "Löschen",
     "details": "Einzelheiten",
     "name": "Name",
-    "desc": "Beschreibung",
+    "desc_en": "Beschreibung auf Englisch",
+    "desc_fi": "Beschreibung auf Finnisch",
+    "desc_de": "Beschreibung auf Deutsch",
     "address": "Adresse",
     "agency": "Agentur",
     "sale":"Verkauf",
