--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -65,7 +65,9 @@
     "delete": "Delete",
     "details": "Listing Details",
     "name": "Name",
-    "desc": "Description",
+    "desc_en": "Description in English",
+    "desc_fi": "Description in Finnish",
+    "desc_de": "Description in German",
     "address": "Address",
     "agency": "Agency",
     "sale":"Sale",
