--- a/client/public/locales/fi/translation.json
+++ b/client/public/locales/fi/translation.json
@@ -65,7 +65,9 @@
     "delete": "Poista",
     "details": "Yksityiskohdat",
     "name": "Nimi",
-    "desc": "Kuvaus",
+    "desc_en": "Kuvaus englanniksi",
+    "desc_fi": "Kuvaus suomeksi",
+    "desc_de": "Kuvaus saksaksi",
     "address": "Osoite",
     "agency": "Toimisto",
     "sale":"Myynti",
