listing and favourities

--- a/client/public/locales/de/translation.json
+++ b/client/public/locales/de/translation.json
@@ -104,7 +104,9 @@
     "deleteAccount": "Konto löschen",
     "signout": "Abmelden",
     "showListings": "Listings anzeigen",
+    "hideListings": "Listings ausblenden",
     "showFavourites": "Favoriten anzeigen",
+    "hideFavourites": "Favoriten ausblenden",
     "yourListings": "Ihre Listings",
     "delete": "Löschen",
     "edit": "Bearbeiten",
