--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -104,7 +104,9 @@
     "deleteAccount": "Delete Account",
     "signout": "Sign Out",
     "showListings": "Show My Listings",
+    "hideListings": "Hide My Listings",
     "showFavourites": "Show My Favourites",
+    "hideFavourites": "Hide My Favourites",
     "yourListings": "Your Listings",
     "delete": "Delete",
     "edit": "Edit",
