--- a/client/public/locales/fi/translation.json
+++ b/client/public/locales/fi/translation.json
@@ -104,7 +104,9 @@
     "deleteAccount": "Poista tili",
     "signout": "Kirjaudu ulos",
     "showListings": "Näytä listaukset",
+    "hideListings": "Piilota listaukset",
     "showFavourites": "Näytä suosikit",
+    "hideFavourites": "Piilota suosikit",
     "yourListings": "Sinun listaukset",
     "delete": "Poista",
     "edit": "Muokkaa",
